// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NewConnectionInstructions /> should match snapshot 1`] = `
<View
  accessibilityIgnoresInvertColors={true}
  style={
    Object {
      "alignItems": "center",
      "height": "100%",
      "justifyContent": "center",
      "width": "100%",
    }
  }
>
  <Image
    source={
      Object {
        "default": "RelativeImageStub",
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "height": "100%",
          "width": "100%",
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "height": "100%",
          "justifyContent": "center",
          "width": "100%",
        },
      ]
    }
  >
    <View>
      <Image
        resizeMode="contain"
        source={
          Object {
            "default": "RelativeImageStub",
          }
        }
        style={
          Object {
            "alignSelf": "center",
            "height": 70.7142857142857,
          }
        }
      />
      <Text
        style={
          Array [
            Object {
              "color": "#EB9B2D",
              "fontFamily": "Lato",
              "fontSize": 19.82857142857143,
              "fontWeight": "bold",
              "marginVertical": 4.785714285714286,
              "textAlign": "center",
            },
          ]
        }
      >
        You now have a digital wallet!
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#505050",
              "fontSize": 16.854285714285716,
              "marginVertical": 4.785714285714286,
              "textAlign": "center",
            },
          ]
        }
      >
        Want to see how it works?
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#505050",
              "fontSize": 14.871428571428572,
              "marginHorizontal": "5%",
              "marginVertical": 4.785714285714286,
              "textAlign": "center",
            },
          ]
        }
      >
        We have setup an optional tutorial site for you to go through using this Connect.Me app. To start this process, go to try.connect.me in a desktop browser and click Start Tutorial.
      </Text>
    </View>
  </View>
</View>
`;

exports[`<NewConnectionInstructions /> should match snapshot for test network 1`] = `
<View
  accessibilityIgnoresInvertColors={true}
  style={
    Object {
      "alignItems": "center",
      "height": "100%",
      "justifyContent": "center",
      "width": "100%",
    }
  }
>
  <Image
    source={
      Object {
        "default": "RelativeImageStub",
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "height": "100%",
          "width": "100%",
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "height": "100%",
          "justifyContent": "center",
          "width": "100%",
        },
      ]
    }
  >
    <View>
      <Image
        resizeMode="contain"
        source={
          Object {
            "default": "RelativeImageStub",
          }
        }
        style={
          Object {
            "alignSelf": "center",
            "height": 70.7142857142857,
          }
        }
      />
      <Text
        style={
          Array [
            Object {
              "color": "#EB9B2D",
              "fontFamily": "Lato",
              "fontSize": 19.82857142857143,
              "fontWeight": "bold",
              "marginVertical": 4.785714285714286,
              "textAlign": "center",
            },
          ]
        }
      >
        You now have a digital wallet!
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#505050",
              "fontSize": 16.854285714285716,
              "marginVertical": 4.785714285714286,
              "textAlign": "center",
            },
          ]
        }
      >
        Want to see how it works?
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#505050",
              "fontSize": 14.871428571428572,
              "marginHorizontal": "5%",
              "marginVertical": 4.785714285714286,
              "textAlign": "center",
            },
          ]
        }
      >
        We see you are not on the live network. Get with an Evernym team member to help you use Connect.Me!
      </Text>
    </View>
  </View>
</View>
`;
